<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/mainLayout">

    <androidx.cardview.widget.CardView
        android:id="@+id/mCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        app:cardBackgroundColor="@color/primary"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp">

            <TextView
                android:id="@+id/constellation_id_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholderID"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/constellation_name_rv"
                style="@style/constellationName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:text="@string/placeholderName"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/constellation_id_rv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.05"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/tvBrightestLabel"
                style="@style/rowLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brightestStar"
                app:layout_constraintStart_toStartOf="@+id/constellation_name_rv"
                app:layout_constraintTop_toBottomOf="@+id/constellation_name_rv" />

            <TextView
                android:id="@+id/constellation_brightest_rv"
                style="@style/brightestInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/placeholderBrightest"
                app:layout_constraintBottom_toBottomOf="@+id/tvBrightestLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvBrightestLabel"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/tvMagnitudeLabel"
                style="@style/rowLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/starMagnitude"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvBrightestLabel"
                app:layout_constraintTop_toBottomOf="@+id/tvBrightestLabel" />

            <TextView
                android:id="@+id/constellation_magnitude_rv"
                style="@style/brightestInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholderMagnitude"
                app:layout_constraintBottom_toBottomOf="@+id/tvMagnitudeLabel"
                app:layout_constraintEnd_toEndOf="@+id/constellation_brightest_rv"
                app:layout_constraintTop_toTopOf="@+id/tvMagnitudeLabel"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/constellation_domain_rv"
                style="@style/constellationDomain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholderDomain"
                app:layout_constraintBottom_toBottomOf="@+id/constellation_name_rv"
                app:layout_constraintEnd_toEndOf="@+id/constellation_brightest_rv"
                app:layout_constraintTop_toTopOf="@+id/constellation_name_rv"
                app:layout_constraintVertical_bias="0.153" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>